Fixing z-index problem with properties

--- a/src/style/properties.less
+++ b/src/style/properties.less
@@ -39,6 +39,7 @@
     align-items: stretch;
     flex-shrink: 0;
     opacity: .97;
+    z-index: 1;
 }
 
 
